<RelativeLayout
    xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools   = "http://schemas.android.com/tools"
    android:layout_width  = "match_parent"
    android:layout_height = "match_parent"
    android:paddingBottom = "@dimen/activity_vertical_margin"
    android:paddingLeft   = "@dimen/activity_horizontal_margin"
    android:paddingRight  = "@dimen/activity_horizontal_margin"
    android:paddingTop    = "@dimen/activity_vertical_margin"
    tools:context         = ".MainActivity" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/Name"
        android:minHeight="48dp">

        <requestFocus android:layout_width="wrap_content" />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_alignRight="@+id/editText1"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/Pword"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <TextView
        android:id   = "@+id/textView1"
        android:text = "@string/Name"
        android:layout_width  = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_alignBottom     = "@+id/editText1"
        android:layout_alignParentLeft = "true" />

    <TextView
        android:id   = "@+id/textView2"
        android:text = "@string/Pword"
        android:layout_width  = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_alignBaseline   = "@+id/editText2"
        android:layout_alignBottom     = "@+id/editText2"
        android:layout_alignParentLeft = "true" />

    <TextView
        android:id   = "@+id/textView3"
        android:text = "@string/App"
        android:layout_width  = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_alignParentTop   = "true"
        android:layout_centerHorizontal = "true"
        android:textAppearance = "?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignBottom="@+id/button2"
        android:layout_marginLeft="86dp"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="-3dp"
        android:onClick="signUp"
        android:text="@string/LoginGet" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="69dp"
        android:onClick="signIn"
        android:text="@string/LoginPost" />

</RelativeLayout>